alb.tf
# resource "aws_security_group" "alb_sg" {
#   name   = "alb-sg"
#   vpc_id = aws_vpc.student_project.id

#   tags = {
#     Name = "${local.resource_name}-alb-sg"
#   }

#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_lb" "app_alb" {
#   name               = "${local.resource_name}-app-alb"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.alb_sg.id]
#   subnets            = aws_subnet.public[*].id
# }

# # Target group for frontend
# resource "aws_lb_target_group" "frontend_tg" {
#   name     = "${local.resource_name}-frontend-tg"
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = aws_vpc.student_project.id
#   target_type = "instance"
#   health_check {
#     path = "/"
#     protocol = "HTTP"
#   }
# }

# # Listener for ALB
# resource "aws_lb_listener" "http" {
#   load_balancer_arn = aws_lb.app_alb.arn
#   port              = 80
#   protocol          = "HTTP"
#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.frontend_tg.arn
#   }
# }

# # Attach frontend EC2 to target group
# resource "aws_lb_target_group_attachment" "frontend" {
#   target_group_arn = aws_lb_target_group.frontend_tg.arn
#   target_id        = aws_instance.web.id
#   port             = 80
# }
